syntax = 'proto3';

message User {
    string username = 1;
    string email = 2;
    string password = 3;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string id = 1;
    User user = 2;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string id = 1;
    User user = 2;
}

message CreateTokenRequest {
    User user = 1;
}

message CreateTokenResponse {
    string id = 1;
    User user = 2;
    string token = 3;
}

message IsAuthenticatedRequest {
    string token = 1;
}

message IsAuthenticatedResponse {
    User user = 1;
    bool authenticated = 2;
}

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
    rpc CreateToken (CreateTokenRequest) returns (CreateTokenResponse) {}
    rpc IsAuthenticated (IsAuthenticatedRequest) returns (IsAuthenticatedResponse) {}
}